infrastructure/database/cloudnative-pg/operator/network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-webhook-access
  namespace: cloudnative-pg
spec:
  description: "Allow Kube-API-Server to access the CloudNativePG webhook for validation and mutation."
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
  ingress:
    - fromEndpoints:
        - matchLabels:
            # This is the standard label for kube-apiserver pods.
            k8s-app: kube-apiserver
        - matchLabels:
            # Also allow from control plane component
            component: kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
            - port: "443"
              protocol: TCP
